@@ -9,6 +9,11 @@
         * Have 90+ AP or are using BoAT
     * Pool for 90+ AP before casting Celestial Alingment/Incarnation. ***This also applies to the opener***.
     * Kyrian makes more effective alignment of Kindred Spirits & Balance of All Things crit buff.
+    * The following consumables are used:
+        * Celestial Guidance weapon enchant
+        * Feast of Gluttonous Hedonism
+        * Flask of Spectral Power
+        * Potion of Sectral Intellect
 
 1. What about bugs on the Beta/PTR? Whicha are assumed to be fixed for the sims?
     * Moons correctly benefit from nature buffs such as Solar Eclipse, Balance of All Things nature crit buff.
