@@ -3,7 +3,7 @@
     <script>
       function resetTitle() {
         let title = document.getElementById('simtitle');
-        title.textContent = 'Detailed Sims by Talents';
+        title.textContent = 'Frequently Asked Questions';
       }
       function setTitle(str) {
         let title = document.getElementById('simtitle');
