@@ -1,0 +1,189 @@
+copy="NB_/____/__/___"
+talents=1000000
+copy="WOE/____/__/___"
+talents=2000000
+copy="FON/____/__/___"
+talents=3000000
+copy="___/SOTF/__/___"
+talents=0000100
+copy="___/SL__/__/___"
+talents=0000200
+copy="___/INC_/__/___"
+talents=0000300
+copy="___/____/SD/___"
+talents=0000010
+copy="___/____/TM/___"
+talents=0000020
+copy="___/____/SF/___"
+talents=0000030
+copy="___/____/__/SOL"
+talents=0000001
+copy="___/____/__/FOE"
+talents=0000002
+copy="___/____/__/NM_"
+talents=0000003
+
+copy="NB_/SOTF/SD/SOL"
+talents=1000111
+copy="NB_/SOTF/SD/FOE"
+talents=1000112
+copy="NB_/SOTF/SD/NM_"
+talents=1000113
+copy="NB_/SOTF/TM/SOL"
+talents=1000121
+copy="NB_/SOTF/TM/FOE"
+talents=1000122
+copy="NB_/SOTF/TM/NM_"
+talents=1000123
+copy="NB_/SOTF/SF/SOL"
+talents=1000131
+copy="NB_/SOTF/SF/FOE"
+talents=1000132
+copy="NB_/SOTF/SF/NM_"
+talents=1000133
+copy="NB_/SL__/SD/SOL"
+talents=1000211
+copy="NB_/SL__/SD/FOE"
+talents=1000212
+copy="NB_/SL__/SD/NM_"
+talents=1000213
+copy="NB_/SL__/TM/SOL"
+talents=1000221
+copy="NB_/SL__/TM/FOE"
+talents=1000222
+copy="NB_/SL__/TM/NM_"
+talents=1000223
+copy="NB_/SL__/SF/SOL"
+talents=1000231
+copy="NB_/SL__/SF/FOE"
+talents=1000232
+copy="NB_/SL__/SF/NM_"
+talents=1000233
+copy="NB_/INC_/SD/SOL"
+talents=1000311
+copy="NB_/INC_/SD/FOE"
+talents=1000312
+copy="NB_/INC_/SD/NM_"
+talents=1000313
+copy="NB_/INC_/TM/SOL"
+talents=1000321
+copy="NB_/INC_/TM/FOE"
+talents=1000322
+copy="NB_/INC_/TM/NM_"
+talents=1000323
+copy="NB_/INC_/SF/SOL"
+talents=1000331
+copy="NB_/INC_/SF/FOE"
+talents=1000332
+copy="NB_/INC_/SF/NM_"
+talents=1000333
+
+copy="WOE/SOTF/SD/SOL"
+talents=2000111
+copy="WOE/SOTF/SD/FOE"
+talents=2000112
+copy="WOE/SOTF/SD/NM_"
+talents=2000113
+copy="WOE/SOTF/TM/SOL"
+talents=2000121
+copy="WOE/SOTF/TM/FOE"
+talents=2000122
+copy="WOE/SOTF/TM/NM_"
+talents=2000123
+copy="WOE/SOTF/SF/SOL"
+talents=2000131
+copy="WOE/SOTF/SF/FOE"
+talents=2000132
+copy="WOE/SOTF/SF/NM_"
+talents=2000133
+copy="WOE/SL__/SD/SOL"
+talents=2000211
+copy="WOE/SL__/SD/FOE"
+talents=2000212
+copy="WOE/SL__/SD/NM_"
+talents=2000213
+copy="WOE/SL__/TM/SOL"
+talents=2000221
+copy="WOE/SL__/TM/FOE"
+talents=2000222
+copy="WOE/SL__/TM/NM_"
+talents=2000223
+copy="WOE/SL__/SF/SOL"
+talents=2000231
+copy="WOE/SL__/SF/FOE"
+talents=2000232
+copy="WOE/SL__/SF/NM_"
+talents=2000233
+copy="WOE/INC_/SD/SOL"
+talents=2000311
+copy="WOE/INC_/SD/FOE"
+talents=2000312
+copy="WOE/INC_/SD/NM_"
+talents=2000313
+copy="WOE/INC_/TM/SOL"
+talents=2000321
+copy="WOE/INC_/TM/FOE"
+talents=2000322
+copy="WOE/INC_/TM/NM_"
+talents=2000323
+copy="WOE/INC_/SF/SOL"
+talents=2000331
+copy="WOE/INC_/SF/FOE"
+talents=2000332
+copy="WOE/INC_/SF/NM_"
+talents=2000333
+
+copy="FON/SOTF/SD/SOL"
+talents=3000111
+copy="FON/SOTF/SD/FOE"
+talents=3000112
+copy="FON/SOTF/SD/NM_"
+talents=3000113
+copy="FON/SOTF/TM/SOL"
+talents=3000121
+copy="FON/SOTF/TM/FOE"
+talents=3000122
+copy="FON/SOTF/TM/NM_"
+talents=3000123
+copy="FON/SOTF/SF/SOL"
+talents=3000131
+copy="FON/SOTF/SF/FOE"
+talents=3000132
+copy="FON/SOTF/SF/NM_"
+talents=3000133
+copy="FON/SL__/SD/SOL"
+talents=3000211
+copy="FON/SL__/SD/FOE"
+talents=3000212
+copy="FON/SL__/SD/NM_"
+talents=3000213
+copy="FON/SL__/TM/SOL"
+talents=3000221
+copy="FON/SL__/TM/FOE"
+talents=3000222
+copy="FON/SL__/TM/NM_"
+talents=3000223
+copy="FON/SL__/SF/SOL"
+talents=3000231
+copy="FON/SL__/SF/FOE"
+talents=3000232
+copy="FON/SL__/SF/NM_"
+talents=3000233
+copy="FON/INC_/SD/SOL"
+talents=3000311
+copy="FON/INC_/SD/FOE"
+talents=3000312
+copy="FON/INC_/SD/NM_"
+talents=3000313
+copy="FON/INC_/TM/SOL"
+talents=3000321
+copy="FON/INC_/TM/FOE"
+talents=3000322
+copy="FON/INC_/TM/NM_"
+talents=3000323
+copy="FON/INC_/SF/SOL"
+talents=3000331
+copy="FON/INC_/SF/FOE"
+talents=3000332
+copy="FON/INC_/SF/NM_"
+talents=3000333
